--- a/index.html
+++ b/index.html
@@ -6,32 +6,48 @@
     <title>Emma Dong</title>
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <header>
         <h1>Emma Dong</h1>
         <p>Computer Science @ Carnegie Mellon University</p>
+        <!-- Add navigation links to other pages -->
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Passionate about machine learning, algorithms, and software development. Currently exploring fairness in ML models.</p>
+    <section id="home">
+        <h2>Welcome!</h2>
+        <p>This is the homepage. You can navigate to other sections using the links above.</p>
     </section>
 
-    <section id="projects">
+    <section id="about-preview">
+        <h2>About Me</h2>
+        <p>Passionate about machine learning, algorithms, and software development. Currently exploring fairness in ML models.</p>
+        <p><a href="about.html">Learn more about me &rarr;</a></p>
+    </section>
+
+    <section id="projects-preview">
         <h2>Projects</h2>
         <ul>
             <li><strong>Kitty Klicker:</strong> Java Swing game for fine motor skills development.</li>
             <li><strong>Discord Bot:</strong> JavaScript moderation bot for large servers.</li>
             <li><strong>Number Identifier:</strong> Python-based CNN for digit recognition.</li>
         </ul>
+        <p><a href="projects.html">View all projects &rarr;</a></p>
     </section>
 
-    <section id="contact">
+    <section id="contact-preview">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:emmad@andrew.cmu.edu">emmad@andrew.cmu.edu</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/emmad6688" target="_blank">emmad6688</a></p>
+        <p><a href="contact.html">Get in touch &rarr;</a></p>
     </section>
 </body>
 </html>
