--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
     <section id="about-preview">
-        <h2>About Me</h2>
+        <h2>who I am</h2>
         <p>Passionate about machine learning, algorithms, and software development. Currently exploring fairness in ML models.</p>
         <p><a href="about.html">Learn more about me &rarr;</a></p>
     </section>
