--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <p>Computer Science @ Carnegie Mellon University</p>
         <!-- Add navigation links to other pages -->
         <nav>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="whoiam.html">Who I am</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">home</a></li>
+                <li><a href="whoiam.html">who I am</a></li>
+                <li><a href="projects.html">projects</a></li>
+                <li><a href="contact.html">contact</a></li>
         </nav>
     </header>
     
