--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="about-preview">
         <h2>who I am</h2>
         <p>Passionate about machine learning, algorithms, and software development. Currently exploring fairness in ML models.</p>
-        <p><a href="about.html">Learn more about me &rarr;</a></p>
+        <p><a href="whoiam.html">who I am &rarr;</a></p>
     </section>
 
     <section id="projects-preview">
@@ -45,7 +45,7 @@
         <h2>Contact</h2>
         <p>Email: <a href="mailto:emmad@andrew.cmu.edu">emmad@andrew.cmu.edu</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/emmad6688" target="_blank">emmad6688</a></p>
-        <p><a href="contact.html">Get in touch &rarr;</a></p>
+        <p><a href="contact.html">Contact me &rarr;</a></p>
     </section>
 </body>
 </html>
