--- a/whoiam.html
+++ b/whoiam.html
@@ -12,11 +12,11 @@
         <h1>Emma Dong</h1>
         <p>Computer Science @ Carnegie Mellon University</p>
         <nav>
-                <li><a href="index.html">home</a></li>
-                <li><a href="whoiam.html">who I am</a></li>
-                <li><a href="projects.html">projects</a></li>
-                <li><a href="contact.html">contact</a></li>
-        </nav>
+                <a href="index.html">home</a></li>
+                <a href="whoiam.html">who I am</a></li>
+                <a href="projects.html">projects</a></li>
+                <a href="contact.html">contact</a></li>
+        <nav>
     </header>
 
     <section id="about">
