--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <h1>Emma Dong</h1>
         <p>Computer Science @ Carnegie Mellon University</p>
         <!-- Add navigation links to other pages -->
-        <nav>
-                <a href="index.html">home</a></li>
-                <a href="whoiam.html">who I am</a></li>
-                <a href="projects.html">projects</a></li>
-                <a href="contact.html">contact</a></li>
-        </nav>
+    <nav>
+        <a href="index.html" class="nav-btn">Home</a>
+        <a href="who I am.html" class="nav-btn">who I am</a>
+        <a href="projects.html" class="nav-btn">projects</a>
+        <a href="contact.html" class="nav-btn">contact</a>
+    </nav>
     </header>
     
     <section id="home">
