--- a/projects.html
+++ b/projects.html
@@ -12,10 +12,10 @@
         <h1>Emma Dong</h1>
         <p>Computer Science @ Carnegie Mellon University</p>
         <nav>
-                <li><a href="index.html">home</a></li>
-                <li><a href="whoiam.html">who I am</a></li>
-                <li><a href="projects.html">projects</a></li>
-                <li><a href="contact.html">contact</a></li>
+            <a href="index.html" class="nav-btn">Home</a>
+            <a href="who I am.html" class="nav-btn">who I am</a>
+            <a href="projects.html" class="nav-btn">projects</a>
+            <a href="contact.html" class="nav-btn">contact</a>
         </nav>
     </header>
 
