--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,10 @@
         <h1>Emma Dong</h1>
         <p>Computer Science @ Carnegie Mellon University</p>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
+            <a href="index.html" class="nav-btn">home</a>
+            <a href="whoiam.html" class="nav-btn">who I am</a>
+            <a href="projects.html" class="nav-btn">projects</a>
+            <a href="contact.html" class="nav-btn">contact</a>
         </nav>
     </header>
 
