--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <p>Computer Science @ Carnegie Mellon University</p>
         <!-- Add navigation links to other pages -->
     <nav>
-        <a href="index.html" class="nav-btn">Home</a>
-        <a href="who I am.html" class="nav-btn">who I am</a>
+        <a href="index.html" class="nav-btn">home</a>
+        <a href="whoiam.html" class="nav-btn">who I am</a>
         <a href="projects.html" class="nav-btn">projects</a>
         <a href="contact.html" class="nav-btn">contact</a>
     </nav>
