--- a/whoiam.html
+++ b/whoiam.html
@@ -12,8 +12,8 @@
         <h1>Emma Dong</h1>
         <p>Computer Science @ Carnegie Mellon University</p>
         <nav>
-            <a href="index.html" class="nav-btn">Home</a>
-            <a href="who I am.html" class="nav-btn">who I am</a>
+            <a href="index.html" class="nav-btn">home</a>
+            <a href="whoiam.html" class="nav-btn">who I am</a>
             <a href="projects.html" class="nav-btn">projects</a>
             <a href="contact.html" class="nav-btn">contact</a>
         </nav>
