--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <header>
         <h1>Emma Dong</h1>
         <p>Computer Science @ Carnegie Mellon University</p>
-        <!-- Add navigation links to other pages -->
     <nav>
         <a href="index.html" class="nav-btn">home</a>
         <a href="whoiam.html" class="nav-btn">who I am</a>
@@ -20,31 +19,8 @@
     </header>
     
     <section id="home">
-        <h2>Welcome!</h2>
-        <p>This is the homepage. You can navigate to other sections using the links above.</p>
-    </section>
-
-    <section id="about-preview">
-        <h2>who I am</h2>
-        <p>Passionate about machine learning, algorithms, and software development. Currently exploring fairness in ML models.</p>
-        <p><a href="whoiam.html">who I am &rarr;</a></p>
-    </section>
-
-    <section id="projects-preview">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Kitty Klicker:</strong> Java Swing game for fine motor skills development.</li>
-            <li><strong>Discord Bot:</strong> JavaScript moderation bot for large servers.</li>
-            <li><strong>Number Identifier:</strong> Python-based CNN for digit recognition.</li>
-        </ul>
-        <p><a href="projects.html">View all projects &rarr;</a></p>
-    </section>
-
-    <section id="contact-preview">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:emmad@andrew.cmu.edu">emmad@andrew.cmu.edu</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/emmad6688" target="_blank">emmad6688</a></p>
-        <p><a href="contact.html">Contact me &rarr;</a></p>
+        <h2>welcome!</h2>
+        <p>this is the homepage :3 </p>
     </section>
 </body>
 </html>
