--- a/whoiam.html
+++ b/whoiam.html
@@ -19,8 +19,8 @@
     </header>
 
     <section id="about">
-        <h2>About Me</h2>
-        <p>Passionate about machine learning, algorithms, and software development. Currently exploring fairness in ML models.</p>
+        <h2>who I am</h2>
+        <p>I'm passionate about machine learning, algorithms, and software development. Currently exploring vSLAM algorithm optimization and game development. </p>
     </section>
 </body>
 </html>
