--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,8 @@
 
     <section id="contact">
         <h2>contact</h2>
-        <p>email: <a href="mailto:emmad@andrew.cmu.edu">emmad@andrew.cmu.edu</a></p>
-        <p>linkedIn: <a href="https://www.linkedin.com/in/emmad6688" target="_blank">emmad6688</a></p>
+        <p>Email: <a href="mailto:emmad@andrew.cmu.edu">emmad@andrew.cmu.edu</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/emmad6688" target="_blank">emmad6688</a></p>
     </section>
 </body>
 </html>
