--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="contact">
-        <h2>contact</h2>
+        <h2>Contact</h2>
         <p>Email: <a href="mailto:emmad@andrew.cmu.edu">emmad@andrew.cmu.edu</a></p>
         <p>LinkedIn: <a href="https://www.linkedin.com/in/emmad6688" target="_blank">emmad6688</a></p>
     </section>
