--- a/whoiam.html
+++ b/whoiam.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="about">
-        <h2>who I am</h2>
+        <h2>Who I am</h2>
         <p>I'm passionate about machine learning, algorithms, and software development. Currently exploring vSLAM algorithm optimization and game development. </p>
     </section>
 </body>
