--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     </header>
 
     <section id="projects">
-        <h2>projects</h2>
+        <h2>Projects</h2>
         <ul>
             <li><strong>Kitty Klicker:</strong> Java Swing game for fine motor skills development.</li>
             <li><strong>Discord Bot:</strong> JavaScript moderation bot for large servers.</li>
