--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     
     <section id="home">
-        <h2>welcome!</h2>
+        <h2>Welcome!</h2>
         <p>this is the homepage :3 </p>
     </section>
 </body>
