--- a/index.html
+++ b/index.html
@@ -22,5 +22,39 @@
         <h2>Welcome!</h2>
         <p>this is the homepage :3 </p>
     </section>
+
+
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="200" height="200">
+  <!-- Cat Body -->
+  <ellipse cx="100" cy="120" rx="60" ry="80" fill="white"/>
+
+  <!-- Cat Head -->
+  <circle cx="100" cy="50" r="50" fill="white"/>
+
+  <!-- Cat Ears -->
+  <polygon points="60,20 80,10 80,40" fill="orange"/>
+  <polygon points="140,20 120,10 120,40" fill="orange"/>
+
+  <!-- Cat Eyes -->
+  <circle cx="70" cy="45" r="8" fill="black"/>
+  <circle cx="130" cy="45" r="8" fill="black"/>
+
+  <!-- Cat Nose -->
+  <circle cx="100" cy="65" r="5" fill="pink"/>
+
+  <!-- Cat Mouth -->
+  <path d="M90 75 Q100 85, 110 75" stroke="black" fill="transparent"/>
+  <path d="M90 75 Q100 90, 110 75" stroke="black" fill="transparent"/>
+
+  <!-- Cat Whiskers -->
+  <path d="M40 55 Q60 60, 40 65" stroke="black"/>
+  <path d="M40 45 Q60 40, 40 35" stroke="black"/>
+  <path d="M160 55 Q140 60, 160 65" stroke="black"/>
+  <path d="M160 45 Q140 40, 160 35" stroke="black"/>
+
+  <!-- Cat Paws -->
+  <circle cx="70" cy="150" r="10" fill="orange"/>
+  <circle cx="130" cy="150" r="10" fill="orange"/>
+</svg>
 </body>
 </html>
