--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">'
 
     <style>
+
+    body, html {
+      margin: 0;
+      height: 100%;
+      display: flex;
+      justify-content: center; /* Center horizontally */
+      align-items: center; /* Center vertically */
+      background-color: white; /* Optional background color */
+    }
         svg {
           width: 200px; /* Adjust the size of the cat */
           height: 200px; /* Adjust the size of the cat */
