--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </section>
 
     <section >
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" width="200" height="200">
+        <h2>This will become a cat one day </h2>
     </section>
   
 
