--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emma Dong</title>
-    <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-    <header>
-        <h1>Emma Dong</h1>
-        <p>Computer Science @ Carnegie Mellon University</p>
-    <nav>
-        <a href="index.html" class="nav-btn">home</a>
-        <a href="whoiam.html" class="nav-btn">who I am</a>
-        <a href="projects.html" class="nav-btn">projects</a>
-        <a href="contact.html" class="nav-btn">contact</a>
-    </nav>
-    </header>
-    
-    <section id="home">
-        <h2>Welcome!</h2>
-        <p>this is the homepage :3 </p>
-    </section>
-
-    <section >
-        <h2>This will become a cat one day </h2>
-    </section>
-  
-
-  </svg>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
